Added prefix for IE10, removed trailing slashes

--- a/example.html
+++ b/example.html
@@ -8,14 +8,15 @@
 
     <style>
 
-    .msg { 
+    .msg {
         position: absolute;
-        padding: 5px 10px; 
-        border-radius: 10px; 
-        background-color: #CCC; 
-        -webkit-transition: opacity 1s; 
-        -moz-transition: opacity 1s; 
-        -o-transition: opacity 1s; 
+        padding: 5px 10px;
+        border-radius: 10px;
+        background-color: #CCC;
+        -webkit-transition: opacity 1s;
+        -moz-transition: opacity 1s;
+        -ms-transition: opacity 1s;
+        -o-transition: opacity 1s;
         opacity: 1;
     }
 
@@ -29,9 +30,9 @@
 
     .is-transitioning {
         display: block !important;
-        visibility: visible !important; 
+        visibility: visible !important;
     }
-    
+
     </style>
 
 </head>
