--- a/example.html
+++ b/example.html
@@ -27,7 +27,7 @@
         opacity: 0;
     }
 
-    .is-transitioning {
+    .transitioning {
         display: block !important;
         visibility: visible !important; 
     }
