Fix incorrect page title

--- a/index.html
+++ b/index.html
@@ -2,37 +2,37 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>toggleLoading jQuery Plugin</title>
+		<title>prepareTransition jQuery Plugin</title>
 		<style>
 			body {
 				font: 100%/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 				background: #eee;
 				margin: 1em;
 			}
-			
+
 			a {
 				color: inherit;
 			}
-			
+
 			section {
 				width: 100%;
 				max-width: 600px;
 				margin: auto;
 			}
-			
+
 			h2 {
 				font-size: 100%;
 			}
-			
+
 			p {
 				font-weight: 300;
 			}
-			
+
 			button {
 				font: inherit;
 				margin: 1em 0;
 			}
-			
+
 			#ribbon {
 				position: absolute;
 				top: 0;
@@ -44,14 +44,14 @@
 				position: relative;
 				height: 90px;
 			}
-			
-			#items div { 
+
+			#items div {
 				position: absolute;
-				padding: 5px 10px;  
-				background-color: #CCC; 
-				-webkit-transition: opacity 1s; 
-				-moz-transition: opacity 1s; 
-				-o-transition: opacity 1s; 
+				padding: 5px 10px;
+				background-color: #CCC;
+				-webkit-transition: opacity 1s;
+				-moz-transition: opacity 1s;
+				-o-transition: opacity 1s;
 				opacity: 1;
 			}
 
@@ -70,7 +70,7 @@
 
 			.transitioning {
 				display: block !important;
-				visibility: visible !important; 
+				visibility: visible !important;
 			}
 		</style>
 	</head>
