--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
         <div class="item">Item 1</div>
         <div class="item hidden">Item 2</div>
       </div>
-      <a class="ribbon" href="https://github.com/OliverJAsh/PrepareTransition">
-        <img src="https://a248.e.akamai.net/assets.github.com/img/71eeaab9d563c2b3c590319b398dd35683265e85/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub">
-      </a>
+      <a href="https://github.com/OliverJAsh/PrepareTransition/"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     </section>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="jquery.preparetransition.js"></script>
