Fix ribbon (take 2)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         position: absolute;
         top: 0;
         right: 0;
+        border: 0;
       }
 
       .example {
@@ -57,8 +58,8 @@
         <div class="item">Item 1</div>
         <div class="item hidden">Item 2</div>
       </div>
-      <a href="https://github.com/OliverJAsh/PrepareTransition/"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     </section>
+    <a href="https://github.com/OliverJAsh/PrepareTransition/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="jquery.preparetransition.js"></script>
     <script>
